Update college name and contact details in index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-</title>Pragati College</title>
+</title>Pragati Engineering College</title>
 
 <style>
 body {
@@ -42,13 +42,13 @@ footer {
 <body>
 
 <header>
-    <h1>ABC College of Engineering</h1>
+    <h1>Prgati College of Engineering</h1>
     <p>Excellence in Education Since 2000</p>
 </header>
 
 <section>
     <h2>About Us</h2>
-    <p>ABC College provides quality education and modern facilities for students.</p>
+    <p>Pragati College provides quality education and modern facilities for students.</p>
 </section>
 
 <section>
@@ -56,6 +56,7 @@ footer {
     <p>B.Tech - Computer Science</p>
     <p>B.Sc - Mathematics</p>
     <p>B.Com - Finance</p>
+    <p>ECE - Electronics and Communication Engineering</p>
     <p>MBA - Marketing</p>
 </section>
 
@@ -68,13 +69,13 @@ footer {
 
 <section>
     <h2>Contact Us</h2>
-    <p>Email: abc@gmail.com</p>
-    <p>Phone: +91 9876543210</p>
-    <p>Address: Hyderabad</p>
+    <p>Email: pragati@gmail.com</p>
+    <p>Phone: +91 xxxxxxxxxx</p>
+    <p>Address: surampalem</p>
 </section>
 
 <footer>
-    © 2026 ABC College | All Rights Reserved
+    © 2026 Pragati Engineering College | All Rights Reserved
 </footer>
 
 </body>
