Correct college name from 'Prgati' to 'Pragati'

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ footer {
 <body>
 
 <header>
-    <h1>Prgati College of Engineering</h1>
+    <h1>Pragati Engineering College</h1>
     <p>Excellence in Education Since 2000</p>
 </header>
 
